# cixl

./: CMakeLists.txt  LICENSE.txt  README.md  scratch  todo.org
devlog/: all_work_no_tetris.md  beyond_booleans.md  bidi_pipes.md  catching_exceptions.md  collab_server.md  compiling_to_c.md  console_painting.md  console_walkimation.md  good_times.md  gradual_generics.md  iterating_towards_v10.md  mandel_zoom.md  minimal_fibers.md  slab_allocation.md  turn_on_plugin_encrypt.md  unified_function_io.md
devlog/console_walkimation/: dynamic.cx  static.cx  walker.cx
examples/: #tcpscan.cx#  .#tcpscan.cx  aclient.cx  ansi.cx  aserver.cx  binhex.cx  bookings.cx  cixtris.cx  collabri.cx  edist.cx  guess.cx  hexbin.cx  histogram.cx  ir.cx  keycode.cx  mandelbrot.cx  procwrap.cx  qdb.cx  queue.cx  sir.cx  tcpscan.cx  tellux.cx
perf/: bench1.cx  bench1.py  bench2.cx  bench2.py  bench3.cx  bench3.py  bench4.cx  bench4.py  bench5.cx  bench5.rb
src/: main.c  tests.c
src/cixl/: .#tok.c  arg.c  arg.h  args.c  args.h  bin.c  bin.h  bool.c  bool.h  box.c  box.h  buf.c  buf.h  call.c  call.h  call_iter.c  call_iter.h  catch.c  catch.h  char.c  char.h  cmp.c  cmp.h  color.c  color.h  coro.c  cx.c  cx.h  emit.c  emit.h  env.c  env.h  error.c  error.h  eval.c  eval.h  file.c  file.h  fimp.c  fimp.h  (+95 more)
src/cixl/compat/: ucontext.h
src/cixl/lib/: abc.c  abc.h  bin.c  bin.h  buf.c  buf.h  cond.c  const.c  const.h  error.c  error.h  func.c  func.h  gfx.c  gfx.h  guid.c  guid.h  io.c  io.h  io_mem.c  io_mem.h  iter.c  iter.h  math.c  math.h  meta.c  net.c  net.h  pair.c  pair.h  poll.c  poll.h  proc.c  proc.h  queue.c  queue.h  rec.c  rec.h  ref.c  ref.h  (+18 more)
src/cixl/libs/: bin.c  bin.h  cond.c  cond.h  error.c  func.c  func.h  guid.c  guid.h  io.c  io.h  iter.c  iter.h  math.c  math.h  meta.c  meta.h  net.c  net.h  pair.c  pair.h  (+19 more)
tests/: bin.cx  comment.cx  cond.cx  error.cx  func.cx  io.cx  iter.cx  math.cx  meta.cx  pair.cx  proc.cx  rec.cx  ref.cx  scope.cx  stack.cx  str.cx  sym.cx  table.cx  task.cx  tests.cx  time.cx  type.cx  var.cx
(+46 files in other folders)
